--- a/links/program/courses/items/items.html
+++ b/links/program/courses/items/items.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="box">
-            <img src="/img/video_unavailable.png">
+            <img src="confiable-v0/img/video_unavailable.png">
         </div>
     </div>
 </body>
